fixing scrollbar and scrolling issue

--- a/src/components/infinite/style.less
+++ b/src/components/infinite/style.less
@@ -2,7 +2,6 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  min-height: 0;
 }
 .reframe-infinite-loader {
   flex: 0 0 3.5em;
