--- a/src/components/modal_panel/style.less
+++ b/src/components/modal_panel/style.less
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   background: #FFFFFF;
-  min-height: 1px;
 }
 .reframe-modal-panel-header {
   flex: 0 0 3.5em;
@@ -33,5 +32,4 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-  min-height: 1px;
 }
