--- a/src/components/scrollpane/style.less
+++ b/src/components/scrollpane/style.less
@@ -2,7 +2,6 @@
   display: flex;
   flex: 1;
   position: relative;
-  min-height: 0;
 }
 .reframe-scrollpane-inner {
   display: flex;
