--- a/src/components/search/style.less
+++ b/src/components/search/style.less
@@ -7,11 +7,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-}
-.reframe-search-results {
   background-color: lighten(@black, 97);
-  .scrollable();
-  flex: 1;
 }
 .reframe-search-item {
   .hover(background-color, fadeout(@black, 95));
