--- a/src/controls/lookup/style.less
+++ b/src/controls/lookup/style.less
@@ -58,7 +58,6 @@
   display:flex;
   flex-direction: column;
   background-color: #FFF;
-  min-height: 1px;
 }
 .reframe-lookup-panel-search {
   flex: 0 0 3.5px;
