--- a/src/core.less
+++ b/src/core.less
@@ -31,6 +31,7 @@
 @error_color: @red;
 * {
 	-webkit-tap-highlight-color: none;
+  min-height: 0;
 }
 body {
 	background-color: #FFFFFF;
